Node Revision Delete 7.x-2.7, 2017-05-24
----------------------------------------
Changes since 7.x-2.6:

- #2881502 by adriancid: Use dt() function to translate the drush command
  strings.
- #2881467 by adriancid: Disable the 'Delete revisions now' option if there not
  exists candidates nodes with revisions to delete.
- #2881321 by adriancid: Always show the status table in the admin settings
  page.
- #2881289 by adriancid: Put the admin form in the
  node_revision_delete.admin.inc file.
- #2871238 by by applicity_sam, adriancid: Add the 'Limit the amount of
  revisions for this content type' option in the Publishing option vertical tab.
- #2881168 by adriancid: Create the CHANGELOG.txt file.
- #2867883 by adriancid: Delete the custom variables related to content types if
  they really exists.
- #2865907 by adriancid, dhwani.addweb: Use the README.txt template.
- #2869563 by adriancid: Once the content type is deleted the variables remains
  in the database.
- #2333555 by kalabro: PostgreSQL PDOException in
  node_revision_delete_candidates().
- #2866086 by adriancid, krina.addweb: Fix code standard format.
- #2869206 by adriancid: Add a destination to the edit link in the module
  configuration page.
- #2866092 by adriancid: Unused variable.
- #2869163 by adriancid, rodrigoac: Improve the table header in the
  Node Revision Delete Administration Page.
- #2869096 by adriancid, rodrigoac: Improve the permission title and 
  description.
- #2867877 by adriancid, rodrigoac: Delete the node_revision_delete_cron config
  variable when the module is uninstalled.
- #2248657 by vbouchet: Implements hook_workbench_moderation_transition.
- #2257257 by jeremyclassic, vbouchet: List tracked content types at admin page.
- by juampy: Validate arguments at Drush command.
- by juampy: Remove unused option --show-deleted.

Node Revision Delete 7.x-2.6, 2014-09-01
----------------------------------------
Changes since 7.x-2.5:

- by juampy: Fix bug when reporting final results.
