@@ -4,7 +4,6 @@
  * @file
  * Node Revision Delete Module.
  */
-
 // Maximum amount of revisions to delete per cron run.
 define('NODE_REVISION_DELETE_TIME', 'never');
 define('NODE_REVISION_DELETE_CRON', 50);
@@ -261,13 +260,25 @@ function node_revision_delete_candidates($content_type, $max_revisions) {
 function node_revision_delete_form_node_type_form_alter(&$form, &$form_state) {
   $type = $form['#node_type']->type;
   $track = variable_get('node_revision_delete_track_' . $type, NODE_REVISION_DELETE_TRACK);
-  $form['workflow']['node_revision_delete_track'] = array(
+  $form['workflow']['section'] = array(
+    '#type' => 'fieldset',
+    '#title' => t('Node Revision Delete'),
+    '#collapsible' => FALSE,
+    '#collapsed' => FALSE,
+    '#attributes' => array('class' => array('fieldgroup', 'form-composite')),
+    '#attached' => array(
+      'css' => array(
+        drupal_get_path('module', 'node_revision_delete') . '/css/node_revision_delete.css',
+      ),
+    ),
+  );
+  $form['workflow']['section']['node_revision_delete_track'] = array(
     '#type' => 'checkbox',
     '#title' => t('Limit the amount of revisions for this content type'),
     '#default_value' => $track,
   );
   $number = variable_get('node_revision_delete_number_' . $type, NODE_REVISION_DELETE_NUMBER);
-  $form['workflow']['node_revision_delete_number'] = array(
+  $form['workflow']['section']['node_revision_delete_number'] = array(
     '#type' => 'textfield',
     '#title' => t('Maximum number of revisions to keep'),
     '#description' => t('Oldest revisions will be deleted when the total amount surpases this value. Set it to 1 to remove all revisions.'),
